@@ -1,107 +1,78 @@
 package dungeonmania.game;
 
-import java.io.File;
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.Reader;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
-
-import org.json.JSONArray;
-import org.json.JSONObject;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
-
-import dungeonmania.Battle;
+import dungeonmania.dtos.ConfigDto;
+import dungeonmania.dtos.DungeonsDto;
+import dungeonmania.dtos.GoalConditionDto;
 import dungeonmania.entities.Entity;
 import dungeonmania.entities.EntityFactory;
 import dungeonmania.entities.items.Item;
 import dungeonmania.entities.movingEntity.Mercenary;
 import dungeonmania.entities.movingEntity.Player;
 import dungeonmania.entities.movingEntity.playerStrategy.PlayerStrategy;
-import dungeonmania.game.Deserializer.BattleDeserializer;
 import dungeonmania.game.Deserializer.EntityDeserializer;
 import dungeonmania.game.Deserializer.ItemDeserializer;
 import dungeonmania.game.Deserializer.PlayerStrategyDeserializer;
-import dungeonmania.util.FileLoader;
 import dungeonmania.goals.Goal;
 import dungeonmania.goals.GoalFactory;
+import dungeonmania.util.FileLoader;
+import lombok.Getter;
+
+import java.io.*;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 public class GameLauncher {
 
+    private static final List<String> savedGames = new ArrayList<>();
+    private static final String gamePath = "./bin/";
+    private static final ObjectMapper objectMapper = new ObjectMapper().setPropertyNamingStrategy(PropertyNamingStrategies.SNAKE_CASE);
+    @Getter
     private static Game activeGame;
-    private static JSONObject dungeon;
-    private static JSONObject config;
-    private static List<Entity> entities = new ArrayList<Entity>();
-    private static Goal goal;
-    private static List<String> savedGames = new ArrayList<>();
-    private static String gamePath = "./bin/";
+    private static DungeonsDto dungeon;
+    @Getter
+    private static ConfigDto config;
+    @Getter
+    private static List<Entity> entities = new ArrayList<>();
 
     public static Game createGame(String dungeonName, String configName) throws IOException {
-        // Load the dungone file
+
+        // Load the dungeon file
         dungeon = loadDungeon(dungeonName);
         // Load the config file
         config = loadConfig(configName);
         // Load the entities
         entities = loadEntities(dungeon);
         // Load the goals
-        goal = loadGoals(dungeon);
+        Goal goal = loadGoals(dungeon.getGoalCondition());
         // Create the game
         activeGame = new Game(dungeonName, configName, entities, goal);
 
         return activeGame;
     }
 
-    private static JSONObject loadDungeon(String dungeonName) throws IOException {
-        String dungeonFileString = FileLoader.loadResourceFile("/dungeons/" + dungeonName + ".json");
-        return new JSONObject(dungeonFileString);
+    private static DungeonsDto loadDungeon(String dungeonName) throws IOException {
+        return objectMapper.readValue(FileLoader.loadResourceFile("/dungeons/" + dungeonName + ".json"), DungeonsDto.class);
     }
 
-    private static JSONObject loadConfig(String configName) throws IOException {
-        String configFileString = FileLoader.loadResourceFile("/configs/" + configName + ".json");
-        return new JSONObject(configFileString);
+    private static ConfigDto loadConfig(String configName) throws IOException {
+        return objectMapper.readValue(FileLoader.loadResourceFile("/configs/" + configName + ".json"), ConfigDto.class);
     }
 
-    private static List<Entity> loadEntities(JSONObject dungeon) {
-        List<Entity> entities = new ArrayList<Entity>();
-
-        JSONArray entitiesArray = dungeon.getJSONArray("entities");
-
-        for (int i = 0; i < entitiesArray.length(); i++) {
-
-            JSONObject entityObject = entitiesArray.getJSONObject(i);
-
-            Entity entity = EntityFactory.createEntity(entityObject);
-
-            entities.add(entity);
-        }
+    private static List<Entity> loadEntities(DungeonsDto dungeonsDto) {
+        List<Entity> entities = new ArrayList<>();
+        dungeonsDto.getEntities().forEach(entity -> entities.add(EntityFactory.createEntity(entity)));
         return entities;
     }
 
-    private static Goal loadGoals(JSONObject dungeon) {
-        return GoalFactory.createGoal(dungeon.getJSONObject("goal-condition"));
-    }
-
-    public static Game getActiveGame() {
-        return activeGame;
-    }
-
-    public static JSONObject getDungeon() {
-        return dungeon;
-    }
-
-    public static JSONObject getConfig() {
-        return config;
-    }
-
-    public static List<Entity> getEntities() {
-        return entities;
+    private static Goal loadGoals(GoalConditionDto goalConditionDto) {
+        return GoalFactory.createGoal(goalConditionDto);
     }
 
     public static void gameToJSON(String gameName) throws IOException {
@@ -116,7 +87,7 @@ public class GameLauncher {
         }
 
         // Create the new game folder if it does not exists
-        String savePath = gamesFolder + gameName;        
+        String savePath = gamesFolder + gameName;
         File gameFolder = new File(savePath);
         if (!gameFolder.exists()) {
             gameFolder.mkdir();
@@ -139,7 +110,7 @@ public class GameLauncher {
 
         // Save the goal
         writer = new FileWriter(savePath + "/goal.json");
-        writer.write(dungeon.getJSONObject("goal-condition").toString());
+        writer.write(dungeon.getGoalCondition().toString());
         writer.close();
 
         // Save the player
@@ -191,12 +162,12 @@ public class GameLauncher {
         config = loadConfig(configName);
 
         // Load the entities
-        String entityString = new String(Files.readAllBytes(Paths.get(savePath + "/entities.json")), StandardCharsets.UTF_8);
+        String entityString = Files.readString(Paths.get(savePath + "/entities.json"));
         List<Entity> savedEntities = loadEntitiesFromJSON(entityString);
 
         // Load the goal
-        String goalString = new String(Files.readAllBytes(Paths.get(savePath + "/goal.json")), StandardCharsets.UTF_8);
-        Goal goal = GoalFactory.createGoal(new JSONObject(goalString));
+        String goalString = Files.readString(Paths.get(savePath + "/goal.json"));
+        Goal goal = GoalFactory.createGoal(new GoalConditionDto());
 
         // create new game
         Game game = new Game(dungeonName, configName, savedEntities, goal);
@@ -217,19 +188,19 @@ public class GameLauncher {
         Player player = gson.fromJson(reader, Player.class);
 
         // Load the player inventory
-        String inventoryString = new String(Files.readAllBytes(Paths.get(savePath + "/playerInventory.json")), StandardCharsets.UTF_8);
+        String inventoryString = Files.readString(Paths.get(savePath + "/playerInventory.json"));
         player.setInventory(loadItemsFromJSON(inventoryString));
 
         // Load the player strategy
-        String strategyString = new String(Files.readAllBytes(Paths.get(savePath + "/playerStrategy.json")), StandardCharsets.UTF_8);
+        String strategyString = Files.readString(Paths.get(savePath + "/playerStrategy.json"));
         player.setStrategy(loadPlayerStrategyFromJSON(strategyString));
 
         // Load the player queued strategies
-        String queuedStrategiesString = new String(Files.readAllBytes(Paths.get(savePath + "/playerQueuedStrategies.json")), StandardCharsets.UTF_8);
+        String queuedStrategiesString = Files.readString(Paths.get(savePath + "/playerQueuedStrategies.json"));
         player.setQueuedStrategies(loadPlayerStrategiesFromJSON(queuedStrategiesString));
 
         // Load the player ally mercenaries
-        String allyString = new String(Files.readAllBytes(Paths.get(savePath + "/playerAlly.json")), StandardCharsets.UTF_8);
+        String allyString = Files.readString(Paths.get(savePath + "/playerAlly.json"));
         player.setAlly(loadAllyFromJSON(allyString));
 
         // // Load the player battles
@@ -240,7 +211,7 @@ public class GameLauncher {
     }
 
     // private static List<Battle> loadBattlesFromJSON(String playerBattlesString) {
-        
+
     //     BattleDeserializer deserializer = new BattleDeserializer();
 
     //     Gson gson = new GsonBuilder()
@@ -253,42 +224,39 @@ public class GameLauncher {
     // }
 
     private static List<Mercenary> loadAllyFromJSON(String playerAllyString) {
-        
+
         EntityDeserializer deserializer = new EntityDeserializer("name");
 
         Gson gson = new GsonBuilder()
-            .registerTypeAdapter(Entity.class, deserializer)
-            .create();
+                .registerTypeAdapter(Entity.class, deserializer)
+                .create();
 
-        List<Mercenary> ally = gson.fromJson(playerAllyString, new TypeToken<List<Mercenary>>() {}.getType());
-
-        return ally;
+        return gson.fromJson(playerAllyString, new TypeToken<List<Mercenary>>() {
+        }.getType());
     }
 
     private static List<PlayerStrategy> loadPlayerStrategiesFromJSON(String strategyString) {
-        
+
         PlayerStrategyDeserializer deserializer = new PlayerStrategyDeserializer("strategyName");
 
         Gson gson = new GsonBuilder()
-            .registerTypeAdapter(PlayerStrategy.class, deserializer)
-            .create();
+                .registerTypeAdapter(PlayerStrategy.class, deserializer)
+                .create();
 
-        List<PlayerStrategy> strategies = gson.fromJson(strategyString, new TypeToken<List<PlayerStrategy>>() {}.getType());
-
-        return strategies;
+        return gson.fromJson(strategyString, new TypeToken<List<PlayerStrategy>>() {
+        }.getType());
     }
 
     public static List<Item> loadItemsFromJSON(String itemString) {
-        
+
         ItemDeserializer itemDeserializer = new ItemDeserializer("name");
-        
+
         Gson gson = new GsonBuilder()
-            .registerTypeAdapter(Item.class, itemDeserializer)
-            .create();
+                .registerTypeAdapter(Item.class, itemDeserializer)
+                .create();
 
-        List<Item> items = gson.fromJson(itemString, new TypeToken<List<Item>>() {}.getType());
-
-        return items;
+        return gson.fromJson(itemString, new TypeToken<List<Item>>() {
+        }.getType());
     }
 
     private static PlayerStrategy loadPlayerStrategyFromJSON(String playerStrategyString) {
@@ -296,8 +264,8 @@ public class GameLauncher {
         PlayerStrategyDeserializer deserializer = new PlayerStrategyDeserializer("strategyName");
 
         Gson gson = new GsonBuilder()
-            .registerTypeAdapter(PlayerStrategy.class, deserializer)
-            .create();
+                .registerTypeAdapter(PlayerStrategy.class, deserializer)
+                .create();
 
         return gson.fromJson(playerStrategyString, PlayerStrategy.class);
     }
@@ -307,16 +275,15 @@ public class GameLauncher {
         EntityDeserializer entityDeserializer = new EntityDeserializer("name");
 
         Gson gson = new GsonBuilder()
-            .registerTypeAdapter(Entity.class, entityDeserializer)
-            .create();
+                .registerTypeAdapter(Entity.class, entityDeserializer)
+                .create();
 
-        List<Entity> entities = gson.fromJson(entityString, new TypeToken<List<Entity>>() {}.getType());
-
-        return entities;
+        return gson.fromJson(entityString, new TypeToken<List<Entity>>() {
+        }.getType());
     }
 
     public static int getSpiderSpawnRate() {
-        return config.getInt("spider_spawn_rate");
+        return config.getSpiderSpawnRate();
     }
 
     // Load the saved games
